GetUser method added
